samples/_failures_safe/1760959000_4a134b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b5e84882.c: In function ‘main’:
./samples/SAFE/__tmp_b5e84882.c:165:21: error: expected ‘;’ at end of input
  165 |         display_menu
      |                     ^
      |                     ;
./samples/SAFE/__tmp_b5e84882.c:165:9: error: expected declaration or statement at end of input
  165 |         display_menu
      |         ^~~~~~~~~~~~
./samples/SAFE/__tmp_b5e84882.c:165:9: error: expected declaration or statement at end of input
